--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "local-links": "^1.4.0",
     "node-libs-browser": "^0.5.0",
     "node-uuid": "^1.4.3",
+    "octicons": "^2.2.0",
     "postcss-loader": "^0.4.3",
     "qs": "^2.4.2",
     "react": "^0.13.3",
